fixed header not vertically aligned
also restructured .pugs

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -32,7 +32,7 @@
 
 .box  {
   padding-top: 8px;
-  padding-bottom: 8px
+  padding-bottom: 8px;
 }
 
 .no-results {
@@ -41,25 +41,19 @@
   font-style: italic;
   display: block;
 }
+
 .results {
   padding-right: 5px;
   padding-left: 5px;
 }
-.splash {
-  margin-top: 64px;
-}
-/*.mdl-textfield__icon {
-  width: 34px;
-  text-align: center;
-  position: absolute;
-  line-height: 1.25;
-  font-size: 34px;
-}
 
-.mdl-textfield__icon ~ * {
-  margin-left: 40px;
-  width: calc(100% - 40px);
-}*/
+.center {
+  margin: auto;
+  width: 100%;
+  padding-top: 24px;
+  padding-bottom: 24px;
+  text-align: center;
+}
 
 body {
     width: 100%;
